--- a/css/global.css
+++ b/css/global.css
@@ -6094,6 +6094,7 @@ table.table_block td {
     .block .list-block {
       margin-top: 0; } }
   .block .list-block li {
+	background-color:rgb(246,246,246);
     padding: 5px 0 6px 20px;
     border-top: 1px solid #d6d4d4; }
     .block .list-block li a i {
