Ligne des menus

--- a/css/global.css
+++ b/css/global.css
@@ -6055,7 +6055,7 @@ table.table_block td {
   font: 600 18px/22px "Open Sans", sans-serif;
   color: #555454;
   background: #f6f6f6;
-  border-top: 5px solid #333333;
+  /*border-top: 5px solid #333333;*/
   text-transform: uppercase;
   padding: 14px 5px 17px 20px;
   margin-bottom: 20px; }
